--- a/source/_assets/sass/_style_leftnav.scss
+++ b/source/_assets/sass/_style_leftnav.scss
@@ -8,7 +8,7 @@
   }
 	ul.nav{
     padding:0;
-    padding-bottom: 2rem;
+    padding-bottom: 1.5rem;
     background: #FFFFFF;
     border:0;
     box-shadow:0;
